--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,7 +1,8 @@
-_commit: 0.1.3
+_commit: 0.1.4
 _src_path: gh:mapp-metabolomics-unit/mapp-repo-copier-template
 common_filename_pattern: '*20250402_PMA_tp24*.mzML'
 email: pierre-marie.allard@unifr.ch
+gap_filling: true
 git_repo_path: /home/allardpm/git_repos/mapp-metabolomics-unit
 github_username: commons-teaching
 gnps_job_id: ''
