up updated taxon

--- a/docs/mapp_project_00050/mapp_batch_00163/results/met_annot_enhancer/mapp_batch_00163/83f53a6fffc047e89b93f957eb72dee8.yaml
+++ b/docs/mapp_project_00050/mapp_batch_00163/results/met_annot_enhancer/mapp_batch_00163/83f53a6fffc047e89b93f957eb72dee8.yaml
@@ -7,9 +7,9 @@ metadata_params:
   organism_header: organism_name
 options:
   do_chembl_match: true
-  do_spectral_match: true
+  do_spectral_match: false
   do_taxo_resolving: true
-  download_gnps_job: true
+  download_gnps_job: false
   keep_lowest_taxon: false
   output_plots: true
 paths:
